--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "hamburger-react": "^2.5.1",
+    "history": "^5.3.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "postcss": "^8.4.38",
