--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -1,64 +1,63 @@
 {
-  "name": "my_portfolio",
-  "version": "0.1.0",
-  "homepage": "http://./",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.97",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "classnames": "^2.5.1",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "hamburger-react": "^2.5.1",
-    "history": "^5.3.0",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "postcss": "^8.4.38",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "sass": "^1.77.2",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/react-redux": "^7.1.33",
-    "@types/testing-library__react": "^10.2.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint-config-standard-with-typescript": "^43.0.1"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": ".eslintrc.js",
-  "author": "",
-  "license": "ISC"
+    "name": "my_portfolio",
+    "version": "0.1.0",
+    "homepage": "http://./",
+    "private": true,
+    "dependencies": {
+        "@reduxjs/toolkit": "^2.2.5",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/axios": "^0.14.0",
+        "@types/jest": "^27.5.2",
+        "@types/react": "^18.3.2",
+        "@types/react-dom": "^18.3.0",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.7.2",
+        "classnames": "^2.5.1",
+        "dotenv": "^16.4.5",
+        "eslint": "^8.57.0",
+        "hamburger-react": "^2.5.1",
+        "postcss": "^8.4.38",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.23.1",
+        "react-scripts": "^5.0.1",
+        "sass": "^1.77.2",
+        "tailwindcss": "^3.4.3",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/node": "^20.14.9",
+        "@types/react-redux": "^7.1.33",
+        "@types/testing-library__react": "^10.2.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "eslint-config-standard-with-typescript": "^43.0.1",
+        "typescript": "^4.9.5"
+    },
+    "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+    "main": ".eslintrc.js",
+    "author": "",
+    "license": "ISC"
 }
