--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -17,5 +17,5 @@
         "jsx": "react-jsx",
         "baseUrl": "./"
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "src/components/_Molecules/index.ts"]
 }
